Fixed issues.